--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^9.13.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "ngx-bootstrap": "^5.6.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
